--- a/auth/package.json
+++ b/auth/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.0",
     "jest": "^29.4.3",
     "ts-jest": "^29.0.5",
