--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "test": "jest"
   },
   "keywords": [],
