--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,14 @@
     "@prisma/client": "^4.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.14.0",
     "@types/supertest": "^2.0.12",
     "jest": "^29.4.3",
