--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/src/index.js",
+    "build": "tsc --build",
+    "clean": "tsc --build --clean",
     "test": "jest"
   },
   "keywords": [],
