--- a/auth/Dockerfile.dev
+++ b/auth/Dockerfile.dev
@@ -6,12 +6,7 @@ COPY package*.json ./
 
 RUN npm install
 
-RUN npm i -g prisma
-
 COPY . .
 
-RUN prisma generate
-
-
-EXPOSE 8080
-CMD [ "npm","run","dev:migrate" ]
+EXPOSE 3331
+CMD [ "npm","run", "dev" ]
