--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
+    "dev:migrate": "prisma migrate deploy && npm run dev",
     "start": "node dist/src/index.js",
     "build": "tsc --build",
     "clean": "tsc --build --clean",
