--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "dev:migrate": "prisma migrate deploy && npm run dev",
+    "dev:migrate": "prisma migrate dev && npm run dev",
     "start": "node dist/src/index.js",
     "build": "tsc --build",
     "clean": "tsc --build --clean",
     "test": "jest",
-    "start:migrate:prod": "prisma migrate deploy && npm run start"
+    "start:migrate:prod": "prisma migrate deploy && npm run start",
+    "db:seed": "prisma migrate dev && ts-node prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
