--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - 3000:3000
     env_file:
-      - ./frontend/.env
+      - ./frontend/.env.prod
 
   backend:
     depends_on:
@@ -22,7 +22,7 @@ services:
     ports:
       - 8080:8080
     env_file:
-      - ./backend/.env
+      - ./backend/.env.prod
 
   auth:
     depends_on:
@@ -33,7 +33,7 @@ services:
     ports:
       - 3331:3331
     env_file:
-      - ./auth/.env
+      - ./auth/.env.prod
 
   mysql:
     image: mysql:5.7
