--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,17 @@ services:
       - 3000:3000
     env_file:
       - ./frontend/.env.prod
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 256M
 
   backend:
     depends_on:
       mysql:
-        condition: service_healthy
+        condition: service_started 
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -24,6 +30,12 @@ services:
       - 8080:8080
     env_file:
       - ./backend/.env.prod
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 256M
 
   auth:
     depends_on:
@@ -35,38 +47,34 @@ services:
       - 3331:3331
     env_file:
       - ./auth/.env.prod
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 256M
 
   mysql:
     image: mysql:5.7
     container_name: mysql
-    environment:
-      MYSQL_DATABASE: "db"
-      MYSQL_USER: "user"
-      MYSQL_PASSWORD: "password"
-      MYSQL_ROOT_PASSWORD: "password"
+    env_file:
+      - ./.env.prod
     ports:
       - "3306:3306"
     expose:
       - "3306"
     volumes:
       - my-db:/var/lib/mysql
-
-    healthcheck:
-      test:
-        [
-          "CMD",
-          "mysqladmin",
-          "-u",
-          "$MYSQL_USER",
-          "-p$MYSQL_PASSWORD",
-          "ping",
-          "-h",
-          "localhost",
-        ]
-
-      interval: 30s
-      timeout: 20s
-      retries: 10
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 256M
+    # healthcheck:
+    #   test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+    #   timeout: 20s
+    #   retries: 10
 
   mongodb:
     image: mongo:latest
@@ -75,7 +83,13 @@ services:
       - 27017:27017
     volumes:
       - mongodata:/data/db
-
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 256M
 volumes:
   my-db:
   mongodata:
+  
